--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ input[type=search] {}
 -------------------------------------------------------------------------------*/
 
 /* new Linux- and Windows-friendly sans-serif font stack: http://mky.be/fontstack */
-body {font: 15px Helmet, Freesans, sans-serif; background-image: url(_/images/bg.png); border-top: 2px solid #E5007D;}
+body {font: 15px Helmet, Freesans, sans-serif; background-image: url(_/images/bg.png); border-top: 2px solid #D52754;}
 
 /* using local fonts? make sure to read up on Paul Irish's 
 	Bulletproof @font-face syntax: http://mky.be/font-face/bulletproof/ */
@@ -183,9 +183,9 @@ h1 {
 	font-weight: normal;
 	text-shadow: 2px 2px 1px #fff;
 	}
-
+#header h1 a {display:none;}
 h2 {
-	font-size: 1.9em;
+	font-size: 2em;
 	font-weight: normal;
 	padding-top: 0px;
 	text-shadow: 2px 2px 1px #fff;
@@ -193,14 +193,29 @@ h2 {
 .widget h2 {color:#bbb; font-size: 1.03em; text-transform: uppercase; padding-bottom: 10px;}
 
 h3 {
-	font-size: 1.4em;
+	font-size: 1.6em;
 	font-weight: normal;
-	padding: 10px 0;
+	padding: 3px 0 10px 0;
 	border-top: 2px solid #ccc;
-	margin-top: 40px;
+	margin-top: 1.3em;
 	text-shadow: 2px 2px 1px #fff;
 	}
-
+h4 {font-size: 1.15em; padding-top: 1.3em;}
+.ingress {font-size: 1.2em;}
+blockquote {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 50px;
+  padding-left: 15px;
+  border-left: 2px solid #ccc;
+} 
+blockquote p:first-letter {
+	float: left;
+	margin: .27em .12em .09em 0;
+	font-size: 3em;
+	font-weight: bold; }
+blockquote p:first-line {
+	font-weight: bold; }
 
 /* Custom text-selection colors (remove any text shadows: twitter.com/miketaylr/status/12228805301) */
 ::-moz-selection{background: #fcd700; color: #fff; text-shadow: none;}
@@ -222,15 +237,19 @@ mark {background-color: #fcd700; color: #000; font-style: italic; font-weight: b
 .post {float:right; width: 609px; }
 .search-result {}
 .category-css {width: 960px;}
-.post h2 {color: #E5007D;}
+.post h2 {color: #D52754;}
 .post p, .post li, .entry p {line-height: 1.5em; max-width: 500px;}
 .post li {padding-bottom: 5px;}
-.post p {padding-bottom: 20px; }
+.post p {padding-bottom: 15px; }
 
 .entry ul {list-style-type: disc; margin: 0 0 1em 1em;}
-.entry {}
+.entry {margin-top: 20px;}
 .entry-content a {}
 .entry-content a:hover {}
+.entry td, .entry th {padding:10px; box-shadow: 1px 1px 1px #bbb; text-align: left; vertical-align: top;}
+.entry table {background-color: #f2f2f2;}
+.entry th {font-size: 1em; color:#666; }
+.entry img {background-color: #f2f2f2; padding: 10px; box-shadow: 1px 1px 1px #bbb; width: none;}
 
 #meta {}
 .meta {color: #777;}
@@ -253,9 +272,10 @@ mark {background-color: #fcd700; color: #000; font-style: italic; font-weight: b
 	border-bottom: 2px solid #ddd;
 	}
 .screen-reader-text {display: none;}
-#header {margin-bottom:36px; padding: 10px 0 6px 0; background-color: #222; box-shadow: 0px 1px 1px #444;}
+#header {margin-bottom:36px; padding: 9px 0 7px 0; background-color: #222; box-shadow: 0px 1px 1px #444;}
 #header .menu li {
 	font-size: 1.03em;
+	font-weight: bold;
 	color: #fff;
 	display: inline;
 	list-style-type: none;
@@ -265,6 +285,7 @@ mark {background-color: #fcd700; color: #000; font-style: italic; font-weight: b
 #header .menu li a {
 	text-decoration: none;
 	}
+#header .menu li:first-child {color: #D52754;}
 #footer {clear: both; padding-top: 32px;}
 
 .navgation {}
@@ -333,10 +354,20 @@ ol.commentlist li.thread-odd {}
 /* Consider this: www.cloudfour.com/css-media-query-for-mobile-is-fools-gold/ */
 @media screen and (max-width: 769px) {
 
+body {font-size: 20px}
 #page-wrap {width:auto; padding:0 20px;}
 .post, .category-css, .search-result {width:100%;}
 #sidebar {width:95%;}
-
+#header .menu {padding: 20px 0;}
+#header .menu li {
+	font-size: 1.03em;
+	line-height: 2.2em;
+	}
+#searchsubmit { 
+	width: 40%;
+	font-size: 1em;
+}
+input[type=search] {width: 50%;}
 		
 }
 
