--- a/style.css
+++ b/style.css
@@ -141,12 +141,14 @@ button {
     *display: inline; /* IE7 inline-block hack */
     *zoom: 1;
     
-    color: #666 !important;
-    background: #ddd; 
-    padding: 5px 8px;
+    color: #fff !important;
+    font-weight: bold;
+    background: #555; 
+    padding: 4px 8px;
     text-transform: uppercase; 
 }
 input[type=search] {}
+.widget_search {float:right; margin-top: -15px;}
  
 /* scale images in IE7 more attractively */
 .ie7 img {-ms-interpolation-mode: bicubic;}
@@ -165,7 +167,7 @@ input[type=search] {}
 -------------------------------------------------------------------------------*/
 
 /* new Linux- and Windows-friendly sans-serif font stack: http://mky.be/fontstack */
-body {font: 15px Helmet, Freesans, sans-serif; background-image: url(_/images/bg.png); border-top: 2px solid #D52754;}
+body {font: 15px 'Droid Sans', Helmet, Freesans, sans-serif; background-image: url(_/images/bg.png); border-top: 2px solid #666;}
 
 /* using local fonts? make sure to read up on Paul Irish's 
 	Bulletproof @font-face syntax: http://mky.be/font-face/bulletproof/ */
@@ -180,17 +182,20 @@ a:visited {color: inherit;}
 /* font styles */
 h1 {
 	font-size: 2.5em;
+	letter-spacing: -0.06em;
 	font-weight: normal;
 	text-shadow: 2px 2px 1px #fff;
 	}
 #header h1 a {display:none;}
 h2 {
-	font-size: 2em;
+	font-family: 'Droid Serif', Helmet, Freesans, sans-serif;
+	letter-spacing: -0.06em;
+	font-size: 2.2em;
 	font-weight: normal;
 	padding-top: 0px;
 	text-shadow: 2px 2px 1px #fff;
 	}
-.widget h2 {color:#bbb; font-size: 1.03em; text-transform: uppercase; padding-bottom: 10px;}
+.widget h2 {color:#bbb; font-size: 1.03em; text-transform: uppercase; padding-bottom: 10px; font-weight: bold; font-family: 'Droid Sans', Helmet, Freesans, sans-serif;}
 
 h3 {
 	font-size: 1.6em;
@@ -200,8 +205,8 @@ h3 {
 	margin-top: 1.3em;
 	text-shadow: 2px 2px 1px #fff;
 	}
-h4 {font-size: 1.15em; padding-top: 1.3em;}
-.ingress {font-size: 1.2em;}
+h4 {font-size: 1.15em; padding: 1.3em 0 8px 0;}
+.ingress {font-size: 1.2em; font-family: 'Droid Serif', Helmet, Freesans, sans-serif;}
 blockquote {
   margin-top: 10px;
   margin-bottom: 10px;
@@ -218,14 +223,14 @@ blockquote p:first-line {
 	font-weight: bold; }
 
 /* Custom text-selection colors (remove any text shadows: twitter.com/miketaylr/status/12228805301) */
-::-moz-selection{background: #fcd700; color: #fff; text-shadow: none;}
-::selection {background: #fcd700; color: #fff; text-shadow: none;} 
+::-moz-selection{background: #FE57A1; color: #fff; text-shadow: none;}
+::selection {background: #FE57A1; color: #fff; text-shadow: none;} 
 
 /*	j.mp/webkit-tap-highlight-color */
-a:link {-webkit-tap-highlight-color: #fcd700;} 
+a:link {-webkit-tap-highlight-color: #FE57A1;} 
 
-ins {background-color: #fcd700; color: #000; text-decoration: none;}
-mark {background-color: #fcd700; color: #000; font-style: italic; font-weight: bold;}
+ins {background-color: #FE57A1; color: #000; text-decoration: none;}
+mark {background-color: #FE57A1; color: #000; font-style: italic; font-weight: bold;}
 
 
 
@@ -237,19 +242,21 @@ mark {background-color: #fcd700; color: #000; font-style: italic; font-weight: b
 .post {float:right; width: 609px; }
 .search-result {}
 .category-css {width: 960px;}
-.post h2 {color: #D52754;}
-.post p, .post li, .entry p {line-height: 1.5em; max-width: 500px;}
-.post li {padding-bottom: 5px;}
+.post h2 {color: #444;}
+.post p, .post li, .entry p {line-height: 1.6em; max-width: 500px;}
+.post li {padding-bottom: 10px;}
 .post p {padding-bottom: 15px; }
 
 .entry ul {list-style-type: disc; margin: 0 0 1em 1em;}
 .entry {margin-top: 20px;}
 .entry-content a {}
 .entry-content a:hover {}
-.entry td, .entry th {padding:10px; box-shadow: 1px 1px 1px #bbb; text-align: left; vertical-align: top;}
-.entry table {background-color: #f2f2f2;}
-.entry th {font-size: 1em; color:#666; }
-.entry img {background-color: #f2f2f2; padding: 10px; box-shadow: 1px 1px 1px #bbb; width: none;}
+.entry td, .entry th {padding:10px; box-shadow: 0px 0px 1px #777; text-align: left; vertical-align: top; -webkit-border-radius: 2px; -moz-border-radius: 2px; border-radius: 2px;}
+.entry table {}
+.entry td {background-color: #fff;}
+.entry th {font-size: 1em; color:#666; background-color: #fbfbfb;}
+.entry img {background-color: #f2f2f2; padding: 10px; box-shadow: 1px 1px 1px #bbb; width: none; -webkit-border-radius: 2px; -moz-border-radius: 2px; border-radius: 2px;}
+.entry td>img {background: none; box-shadow: none; padding: none;}
 
 #meta {}
 .meta {color: #777;}
@@ -262,21 +269,23 @@ mark {background-color: #fcd700; color: #000; font-style: italic; font-weight: b
 	padding: 10px;
 	box-shadow: 1px 1px 1px #bbb;
 	float:left;
+	-webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px;
 	}
 #sidebar li {
-	line-height: 2em;
+	line-height: 2.4em;
+	color: #444;
 	}
-#sidebar ul {
-	padding-bottom: 10px;
-	margin-bottom: 10px;
-	border-bottom: 2px solid #ddd;
-	}
+#sidebar ul {}
+	
+#menu-item--46, #menu-item--43, #menu-item--23, #menu-item--26 {border-top: 2px solid #ddd; padding-top: 10px; margin-top: 10px;}
+#sidebar a:hover {background: #eee; text-shadow: 1px 1px 1px #fff; padding:10px 5px; -webkit-border-radius: 2px; -moz-border-radius: 2px; border-radius: 2px;}
+#sidebar a {text-decoration: none;}
 .screen-reader-text {display: none;}
-#header {margin-bottom:36px; padding: 9px 0 7px 0; background-color: #222; box-shadow: 0px 1px 1px #444;}
+#header {margin-bottom:36px; padding: 3px 0 7px 0; /*background-color: #555; box-shadow: 0px 1px 1px #bbb;*/}
 #header .menu li {
 	font-size: 1.03em;
 	font-weight: bold;
-	color: #fff;
+	color: #444;
 	display: inline;
 	list-style-type: none;
 	padding-right: 10px;
@@ -285,7 +294,7 @@ mark {background-color: #fcd700; color: #000; font-style: italic; font-weight: b
 #header .menu li a {
 	text-decoration: none;
 	}
-#header .menu li:first-child {color: #D52754;}
+#header .menu li:first-child {color: #444;}
 #footer {clear: both; padding-top: 32px;}
 
 .navgation {}
@@ -354,20 +363,32 @@ ol.commentlist li.thread-odd {}
 /* Consider this: www.cloudfour.com/css-media-query-for-mobile-is-fools-gold/ */
 @media screen and (max-width: 769px) {
 
-body {font-size: 20px}
-#page-wrap {width:auto; padding:0 20px;}
+body {font-size: 16px}
+h1 {font-size: 2em;}
+h2 {font-size: 1.6em; font-weight: bold;}
+h3 {font-size: 1.4em;}
+h4 {font-size: 1.2em;}
+p {font-size: 1em;}
+#page-wrap {width:auto; padding:0 10px;}
 .post, .category-css, .search-result {width:100%;}
-#sidebar {width:95%;}
-#header .menu {padding: 20px 0;}
+#sidebar {width:100%; margin-left:-10px; margin-top:40px; -webkit-border-radius: 0px; -moz-border-radius: 0px; border-radius: 0px; padding-top: 40px; padding-bottom: 40px;}
+#sidebar li {line-height: 2.9em;}
+footer {display: none;}
+#header {border-bottom: 5px solid #555; padding-bottom: 80px;;}
+#header .menu {padding: 0px 0;}
 #header .menu li {
 	font-size: 1.03em;
-	line-height: 2.2em;
+	line-height: 2.9em;
+	float: none;
+	display: list-item;
+	border-bottom: 2px solid #ddd;
 	}
 #searchsubmit { 
 	width: 40%;
 	font-size: 1em;
 }
 input[type=search] {width: 50%;}
+.widget_search {float:left; margin-top: none; padding-bottom: 20px; margin-bottom:40px; margin-top: 20px; width:100%; }
 		
 }
 
