--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ article, aside, figure, footer, header, hgroup, nav, section {display: block;}
    There has been a report of problems with standard Google maps as well, but we haven't been able to duplicate or diagnose the issue. */
 img,
 object,
-embed {max-width: 100%;}
+embed {}
 
 /* force a vertical scrollbar to prevent a jumpy page */
 html {overflow-y: scroll;}
@@ -148,7 +148,7 @@ button {
     text-transform: uppercase; 
 }
 input[type=search] {}
-.widget_search {float:right; margin-top: -15px;}
+.widget_search {float:right; margin-top: -21px;}
  
 /* scale images in IE7 more attractively */
 .ie7 img {-ms-interpolation-mode: bicubic;}
@@ -167,13 +167,13 @@ input[type=search] {}
 -------------------------------------------------------------------------------*/
 
 /* new Linux- and Windows-friendly sans-serif font stack: http://mky.be/fontstack */
-body {font: 15px 'Droid Sans', Helmet, Freesans, sans-serif; background-image: url(_/images/bg.png); border-top: 2px solid #666;}
+body {font: 17px 'Open Sans', Helmet, Freesans, sans-serif; background-image: url(_/images/bg.png); border-top: 2px solid #444;}
 
 /* using local fonts? make sure to read up on Paul Irish's 
 	Bulletproof @font-face syntax: http://mky.be/font-face/bulletproof/ */
 
 /* we like off-black for text */
-body, select, input, textarea {color: #333;}
+body, select, input, textarea {color: #555;}
 
 a {color: inherit; text-decoration: underline;}
 a:hover {text-decoration: none;}
@@ -189,18 +189,19 @@ h1 {
 #header h1 a {display:none;}
 h2 {
 	font-family: 'Droid Serif', Helmet, Freesans, sans-serif;
-	letter-spacing: -0.06em;
+	letter-spacing: -0.05em;
 	font-size: 2.2em;
 	font-weight: normal;
 	padding-top: 0px;
 	text-shadow: 2px 2px 1px #fff;
 	}
-.widget h2 {color:#bbb; font-size: 1.03em; text-transform: uppercase; padding-bottom: 10px; font-weight: bold; font-family: 'Droid Sans', Helmet, Freesans, sans-serif;}
+.widget h2 {color:#bbb; font-size: 1.03em; text-transform: uppercase; padding-bottom: 10px; font-weight: bold; font-family: 'Open Sans', Helmet, Freesans, sans-serif;}
 
 h3 {
-	font-size: 1.6em;
+	font-size: 1.7em;
 	font-weight: normal;
-	padding: 3px 0 10px 0;
+	padding: 2px 0 10px 0;
+	line-height: 1em;
 	border-top: 2px solid #ccc;
 	margin-top: 1.3em;
 	text-shadow: 2px 2px 1px #fff;
@@ -237,11 +238,11 @@ mark {background-color: #FE57A1; color: #000; font-style: italic; font-weight: b
 /* And here begins the Wordpress fun.
 -------------------------------------------------------------------------------*/
 
-#page-wrap {width: 960px; margin: 0px auto;}
+#page-wrap {width: 1200px; margin: 0px auto;}
 
-.post {float:right; width: 609px; }
+.post {float:right; width: 839px; }
 .search-result {}
-.category-css {width: 960px;}
+.category-css {width: 1200px;}
 .post h2 {color: #444;}
 .post p, .post li, .entry p {line-height: 1.6em; max-width: 500px;}
 .post li {padding-bottom: 10px;}
@@ -281,7 +282,7 @@ mark {background-color: #FE57A1; color: #000; font-style: italic; font-weight: b
 #sidebar a:hover {background: #eee; text-shadow: 1px 1px 1px #fff; padding:10px 5px; -webkit-border-radius: 2px; -moz-border-radius: 2px; border-radius: 2px;}
 #sidebar a {text-decoration: none;}
 .screen-reader-text {display: none;}
-#header {margin-bottom:36px; padding: 3px 0 7px 0; /*background-color: #555; box-shadow: 0px 1px 1px #bbb;*/}
+#header {margin-bottom:60px; padding-top:4px; /*background-color: #555; box-shadow: 0px 1px 1px #bbb;*/}
 #header .menu li {
 	font-size: 1.03em;
 	font-weight: bold;
@@ -291,9 +292,8 @@ mark {background-color: #FE57A1; color: #000; font-style: italic; font-weight: b
 	padding-right: 10px;
 	text-transform: uppercase;
 	} 
-#header .menu li a {
-	text-decoration: none;
-	}
+#header .menu li a {text-decoration: none;}
+#header .menu li a:hover {border-top: 5px solid #444;}
 #header .menu li:first-child {color: #444;}
 #footer {clear: both; padding-top: 32px;}
 
@@ -361,9 +361,19 @@ ol.commentlist li.thread-odd {}
 -------------------------------------------------------------------------------*/
 
 /* Consider this: www.cloudfour.com/css-media-query-for-mobile-is-fools-gold/ */
+
+
+@media all and (max-width: 1279px) and (min-width: 770px) { 
+
+#page-wrap {width: 980px;}
+.post {float:right; width: 609px; }
+.category-css {width: 980px;}
+
+}
+
 @media screen and (max-width: 769px) {
 
-body {font-size: 16px}
+body {font-family: Helmet, Freesans, sans-serif; }
 h1 {font-size: 2em;}
 h2 {font-size: 1.6em; font-weight: bold;}
 h3 {font-size: 1.4em;}
@@ -376,6 +386,7 @@ p {font-size: 1em;}
 footer {display: none;}
 #header {border-bottom: 5px solid #555; padding-bottom: 80px;;}
 #header .menu {padding: 0px 0;}
+#header .menu li a:hover {border-top: none;}
 #header .menu li {
 	font-size: 1.03em;
 	line-height: 2.9em;
