--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ input[type=search] {}
 -------------------------------------------------------------------------------*/
 
 /* new Linux- and Windows-friendly sans-serif font stack: http://mky.be/fontstack */
-body {font: 17px 'Open Sans', Helmet, Freesans, sans-serif; background-image: url(_/images/bg.png); border-top: 2px solid #444;}
+body {font: 17px 'Open Sans Condensed', Helmet, Freesans, sans-serif; background-image: url(_/images/bg.png); border-top: 2px solid #444;}
 
 /* using local fonts? make sure to read up on Paul Irish's 
 	Bulletproof @font-face syntax: http://mky.be/font-face/bulletproof/ */
@@ -187,7 +187,7 @@ h1 {
 	text-shadow: 2px 2px 1px #fff;
 	}
 #header h1 a {display:none;}
-h2 {
+h2, .entry-title {
 	font-family: 'Droid Serif', Helmet, Freesans, sans-serif;
 	letter-spacing: -0.05em;
 	font-size: 2.2em;
@@ -195,7 +195,7 @@ h2 {
 	padding-top: 0px;
 	text-shadow: 2px 2px 1px #fff;
 	}
-.widget h2 {color:#bbb; font-size: 1.03em; text-transform: uppercase; padding-bottom: 10px; font-weight: bold; font-family: 'Open Sans', Helmet, Freesans, sans-serif;}
+.widget h2 {color:#bbb; font-size: 1.03em; text-transform: uppercase; padding-bottom: 10px; font-weight: bold; font-family: 'Open Sans Condensed', Helmet, Freesans, sans-serif;}
 
 h3 {
 	font-size: 1.7em;
@@ -243,7 +243,7 @@ mark {background-color: #FE57A1; color: #000; font-style: italic; font-weight: b
 .post {float:right; width: 839px; }
 .search-result {}
 .category-css {width: 1200px;}
-.post h2 {color: #444;}
+.post h2, .entry-title {color: #444;}
 .post p, .post li, .entry p {line-height: 1.6em; max-width: 500px;}
 .post li {padding-bottom: 10px;}
 .post p {padding-bottom: 15px; }
@@ -273,13 +273,14 @@ mark {background-color: #FE57A1; color: #000; font-style: italic; font-weight: b
 	-webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px;
 	}
 #sidebar li {
-	line-height: 2.4em;
+	line-height: 1.4em;
+	padding: .5em 0 .5em 0;
 	color: #444;
 	}
 #sidebar ul {}
 	
-#menu-item--46, #menu-item--43, #menu-item--23, #menu-item--26 {border-top: 2px solid #ddd; padding-top: 10px; margin-top: 10px;}
-#sidebar a:hover {background: #eee; text-shadow: 1px 1px 1px #fff; padding:10px 5px; -webkit-border-radius: 2px; -moz-border-radius: 2px; border-radius: 2px;}
+#menu-item--46, #menu-item--43, #menu-item--23, #menu-item--26 {border-top: 2px solid #ddd; padding-top: 15px !important; margin-top: 10px;}
+#sidebar a:hover {background: #eee; text-shadow: 1px 1px 1px #fff; padding:5px 5px; -webkit-border-radius: 2px; -moz-border-radius: 2px; border-radius: 2px;}
 #sidebar a {text-decoration: none;}
 .screen-reader-text {display: none;}
 #header {margin-bottom:60px; padding-top:4px; /*background-color: #555; box-shadow: 0px 1px 1px #bbb;*/}
@@ -381,15 +382,16 @@ h4 {font-size: 1.2em;}
 p {font-size: 1em;}
 #page-wrap {width:auto; padding:0 10px;}
 .post, .category-css, .search-result {width:100%;}
-#sidebar {width:100%; margin-left:-10px; margin-top:40px; -webkit-border-radius: 0px; -moz-border-radius: 0px; border-radius: 0px; padding-top: 40px; padding-bottom: 40px;}
-#sidebar li {line-height: 2.9em;}
+#sidebar {border-top: 5px solid #555; width:100%; margin-left:-10px; margin-top:40px; -webkit-border-radius: 0px; -moz-border-radius: 0px; border-radius: 0px; padding-top: 40px; padding-bottom: 40px;}
+#sidebar li {line-height: 1.5em;}
 footer {display: none;}
-#header {border-bottom: 5px solid #555; padding-bottom: 80px;;}
+#header {border-bottom: 5px solid #555; padding-bottom: 80px; background-color: #fff;}
 #header .menu {padding: 0px 0;}
 #header .menu li a:hover {border-top: none;}
 #header .menu li {
 	font-size: 1.03em;
-	line-height: 2.9em;
+	line-height: 1.5em;
+	padding: .5em 0 .5em 0;
 	float: none;
 	display: list-item;
 	border-bottom: 2px solid #ddd;
