--- a/style.css
+++ b/style.css
@@ -1,430 +1,1 @@
-/*   
-Theme Name: The HTML5 Reset Theme
-Theme URI: http://html5reset.org
-Description: A style-free theme to get you started on an HTML5-based Wordpress theme of your own.
-Author: Monkey Do!
-Author URI: http://monkeydo.biz
-Version: 1
-*/
-
-/*
-	HTML5 Reset Wordpress Theme :: style.css
-	----------------------------------------------------------
-	We have learned much from/been inspired by/taken code where offered from:
-	
-	Eric Meyer					:: http://ericmeyer.com
-	HTML5 Doctor				:: http://html5doctor.com
-	and the HTML5 Boilerplate	:: http://html5boilerplate.com
-	
-	Special thanks: The Wordpress theme owes its start to an empty theme authored 
-		by Chris Coyier & Jeff Starr: http://digwp.com
-	
--------------------------------------------------------------------------------*/
-
-/* Let's default this puppy out
--------------------------------------------------------------------------------*/
-
-html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, figure, footer, header, hgroup, menu, nav, section, time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	outline: 0;
-	font-size: 100%;
-	vertical-align: baseline;
-	background: transparent;
-}									
-
-article, aside, figure, footer, header, hgroup, nav, section {display: block;}
-
-/* Responsive images and other embedded objects
-   Note: keeping IMG here will cause problems if you're using foreground images as sprites, like, say for Google Maps custom placemarkers. 
-   There has been a report of problems with standard Google maps as well, but we haven't been able to duplicate or diagnose the issue. */
-img,
-object,
-embed {}
-
-/* force a vertical scrollbar to prevent a jumpy page */
-html {overflow-y: scroll;}
-
-/* we use a lot of ULs that aren't bulleted. 
-	don't forget to restore the bullets within content. */
-ul {list-style: none;}
-
-blockquote, q {quotes: none;}
-
-blockquote:before, 
-blockquote:after, 
-q:before, 
-q:after {content: ''; content: none;}
-
-a {margin: 0; padding: 0; font-size: 100%; vertical-align: baseline; background: transparent;}
-
-del {text-decoration: line-through;}
-
-abbr[title], dfn[title] {border-bottom: 1px dotted #000; cursor: help;}
-
-/* tables still need cellspacing="0" in the markup */
-table {border-collapse: collapse; border-spacing: 0;}
-th {font-weight: bold; vertical-align: bottom;}
-td {font-weight: normal; vertical-align: top;}
-
-hr {display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin: 1em 0; padding: 0;}
-
-input, select {vertical-align: middle;}
-
-pre {
-	white-space: pre; /* CSS2 */
-	white-space: pre-wrap; /* CSS 2.1 */
-	white-space: pre-line; /* CSS 3 (and 2.1 as well, actually) */
-	word-wrap: break-word; /* IE */
-}
-
-input[type="radio"] {vertical-align: text-bottom;}
-input[type="checkbox"] {vertical-align: bottom; *vertical-align: baseline;}
-.ie6 input {vertical-align: text-bottom;}
-
-select, input, textarea {font: 1em sans-serif;}
-
-table {font-size: inherit; font: 100%;}
- 
-/* Accessible focus treatment
-	people.opera.com/patrickl/experiments/keyboard/test */
-a:hover, a:active {outline: none;}
-
-small {font-size: 0.8em; color: #888;}
-
-strong, th {font-weight: bold;}
-
-td, td img {vertical-align: top;} 
-
-/* Make sure sup and sub don't screw with your line-heights
-	gist.github.com/413930 */
-sub, sup {font-size: 75%; line-height: 0; position: relative;}
-sup {top: -0.5em;}
-sub {bottom: -0.25em;}
-
-/* standardize any monospaced elements */
-pre, code, kbd, samp {font-family: monospace, sans-serif;}
-
-/* hand cursor on clickable elements */
-.clickable,
-label, 
-input[type=button], 
-input[type=submit], 
-button {cursor: pointer;}
-
-/* Webkit browsers add a 2px margin outside the chrome of form elements */
-button, input, select, textarea {margin: 0;}
-
-/* make buttons play nice in IE */
-button {
-	width: auto; 
-	overflow: visible;
-	}
-#searchsubmit {
-	-webkit-border-radius: 2em;
-	border-radius: 2em;
-	font-size: 0.7em;
-    vertical-align: middle;
-    background: none transparent;
-    border: 0 none;
-    cursor: pointer;
-    line-height: 100%;
-    margin: 0;
-    outline: 0 none;
-    padding: 0;
-    position: relative;
-    text-decoration: none;
-    text-align: center;
-    display: inline-block;
-    *display: inline; /* IE7 inline-block hack */
-    *zoom: 1;
-}
- 
-/* scale images in IE7 more attractively */
-.ie7 img {-ms-interpolation-mode: bicubic;}
-
-/* prevent BG image flicker upon hover */
-.ie6 html {filter: expression(document.execCommand("BackgroundImageCache", false, true));}
-
-/* let's clear some floats */
-.clearfix:before, .clearfix:after { content: "\0020"; display: block; height: 0; overflow: hidden; }  
-.clearfix:after { clear: both; }  
-.clearfix { zoom: 1; }  
-
-
-/* Ok, this is where the fun starts.
--------------------------------------------------------------------------------*/
-
-/* new Linux- and Windows-friendly sans-serif font stack: http://mky.be/fontstack */
-body {font: 17px 'Open Sans Condensed', Helmet, Freesans, sans-serif; background-image: url(_/images/bg.png); border-top: 2px solid #444;}
-
-/* using local fonts? make sure to read up on Paul Irish's 
-	Bulletproof @font-face syntax: http://mky.be/font-face/bulletproof/ */
-
-/* we like off-black for text */
-body, select, input, textarea {color: #555;}
-
-/* Custom text-selection colors (remove any text shadows: twitter.com/miketaylr/status/12228805301) */
-::-moz-selection{background: #FE57A1; color: #fff; text-shadow: none;}
-::selection {background: #FE57A1; color: #fff; text-shadow: none;} 
-
-/*	j.mp/webkit-tap-highlight-color */
-a:link {-webkit-tap-highlight-color: #FE57A1;} 
-
-ins {background-color: #FE57A1; color: #000; text-decoration: none;}
-mark {background-color: #FE57A1; color: #000; font-style: italic; font-weight: bold;}
-
-
-/* And here begins the Wordpress fun.
--------------------------------------------------------------------------------*/
-#page-wrap {width: 1200px; margin: 0px auto;} 
-.screen-reader-text {display: none;}
-
-a {color: inherit; text-decoration: underline;}
-a:hover {text-decoration: none;}
-a:visited {color: inherit;}
-
-#meta {}
-.meta {color: #777;}
-.postmetadata {}
-
-#footer {clear: both; padding-top: 32px;}
-
-.navgation {}
-.next-posts {}
-.prev-posts {}
-
-/* Main typography 
--------------------------------------------------------------------------------*/
-h1 {
-	font-size: 2.5em;
-	letter-spacing: -0.06em;
-	font-weight: normal;
-	text-shadow: 2px 2px 1px #fff;
-	}
-h2, .entry-title {
-	font-family: 'Droid Serif', Helmet, Freesans, sans-serif;
-	letter-spacing: -0.05em;
-	font-size: 2.2em;
-	font-weight: normal;
-	padding-top: 0px;
-	text-shadow: 2px 2px 1px #fff;
-	}
-h3 {
-	font-size: 1.7em;
-	font-weight: normal;
-	padding: 2px 0 10px 0;
-	line-height: 1em;
-	border-top: 2px solid #ccc;
-	margin-top: 1.3em;
-	text-shadow: 2px 2px 1px #fff;
-	}
-h4 {font-size: 1.15em; padding: 1.3em 0 8px 0;} 
-
-
-
-/* posts and pages 
--------------------------------------------------------------------------------*/
-.category-css {width: 1200px;}
-.post {float:right; width: 839px; }
-.post h2, .entry-title {color: #444;}
-.post p, .post li, .entry p {line-height: 1.6em; max-width: 500px;}
-.post li {padding-bottom: 10px;}
-.post p {padding-bottom: 15px; }
-
-.entry ul {list-style-type: disc; margin: 0 0 1em 1em;}
-.entry {margin-top: 20px;}
-.entry-content a {}
-.entry-content a:hover {}
-.entry td, .entry th {padding:10px; box-shadow: 0px 0px 1px #777; text-align: left; vertical-align: top; -webkit-border-radius: 2px; -moz-border-radius: 2px; border-radius: 2px;}
-.entry table {}
-.entry td {background-color: #fff;}
-.entry th {font-size: 1em; color:#666; background-color: #fbfbfb;}
-.entry img {background-color: #f2f2f2; padding: 10px; box-shadow: 1px 1px 1px #bbb; width: none; -webkit-border-radius: 2px; -moz-border-radius: 2px; border-radius: 2px;}
-.entry td>img {background: none; box-shadow: none; padding: none;}
-
-/* quote and ingress on posts and pages 
--------------------------------------------------------------------------------*/
-.ingress {font-size: 1.2em; font-family: 'Droid Serif', Helmet, Freesans, sans-serif;}
-
-blockquote {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-left: 50px;
-  padding-left: 15px;
-  border-left: 2px solid #ccc;
-} 
-blockquote p:first-letter {
-	float: left;
-	margin: .27em .12em .09em 0;
-	font-size: 3em;
-	font-weight: bold; }
-blockquote p:first-line {
-	font-weight: bold; }
-
-
-/* Sidebar - widgets 
--------------------------------------------------------------------------------*/
-#sidebar {
-	width: 300px;
-	background: #fbfbfb;
-	margin: 0px 20px 0 0;
-	padding: 10px;
-	box-shadow: 1px 1px 1px #bbb;
-	float:left;
-	-webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px;
-	}
-#sidebar li {
-	line-height: 1.4em;
-	padding: .5em 0 .5em 0;
-	color: #444;
-	}
-#sidebar ul {}
-#sidebar a:hover {background: #eee; text-shadow: 1px 1px 1px #fff; padding:5px 5px; -webkit-border-radius: 2px; -moz-border-radius: 2px; border-radius: 2px;}
-#sidebar a {text-decoration: none;}
-.widget h2 {color:#bbb; font-size: 1.03em; text-transform: uppercase; padding-bottom: 10px; font-weight: bold; font-family: 'Open Sans Condensed', Helmet, Freesans, sans-serif;} /*sidebar menu-parent name*/
-#menu-item--46, #menu-item--43, #menu-item--23, #menu-item--26 {border-top: 2px solid #ddd; padding-top: 15px !important; margin-top: 10px;}
-
-
-/* Header - widgets 
--------------------------------------------------------------------------------*/
-#header h1 a {display:none;}
-#header {margin-bottom:60px; padding-top:4px; /*background-color: #555; box-shadow: 0px 1px 1px #bbb;*/}
-#header .menu li {
-	font-size: 1.03em;
-	font-weight: bold;
-	color: #444;
-	display: inline;
-	list-style-type: none;
-	padding-right: 10px;
-	text-transform: uppercase;
-	} 
-#header .menu li a {text-decoration: none;}
-#header .menu li a:hover {border-top: 5px solid #444;}
-#header .menu li:first-child {color: #444;}
-
-
-/* Search
--------------------------------------------------------------------------------*/
-
-#searchform {}
-#s {}
-#searchsubmt {}
-.search-results #sidebar, .search-no-results #sidebar {display: none;} /*hide the sidebar on searchresult page*/ 
-.search-result {}
-input[type=search] {}
-.widget_search {float:right; margin-top: -21px;}
-#searchsubmit {   
-    color: #fff !important;
-    font-weight: bold;
-    background: #555; 
-    padding: 4px 8px;
-    text-transform: uppercase; 
-}
-.hide {display:none;} /*hide my manually typed searchkeywords in posts and pages*/ 
-body.search.search-results ARTICLE#post-617 {display:none;} /*hide posts I don´t want to appear in searc-results*/ 
-
-
-/* Comments
--------------------------------------------------------------------------------*/	
-ol.commentlist {list-style: none;}
-ol.commentlist li {}
-ol.commentlist li.alt {}
-ol.commentlist li.bypostauthor {}
-ol.commentlist li.byuser {}
-ol.commentlist li.comment-author-admin {}
-ol.commentlist li.comment {border-bottom: 1px dotted #666; padding: 10px;}
-ol.commentlist li.comment div.comment-author {}
-ol.commentlist li.comment div.vcard {}
-ol.commentlist li.comment div.vcard cite.fn {font-style: normal;}
-ol.commentlist li.comment div.vcard cite.fn a.url {}
-ol.commentlist li.comment div.vcard img.avatar {float:right; margin: 0 0 10px 10px;}
-ol.commentlist li.comment div.vcard img.avatar-32 {}
-ol.commentlist li.comment div.vcard img.photo {}
-ol.commentlist li.comment div.vcard span.says {}
-ol.commentlist li.comment div.commentmetadata {}
-ol.commentlist li.comment div.comment-meta {font-size: 10px;}
-ol.commentlist li.comment div.comment-meta a {color: #ccc;}
-ol.commentlist li.comment p {}
-ol.commentlist li.comment ul {}
-ol.commentlist li.comment div.reply {font-size: 11px;}
-ol.commentlist li.comment div.reply a {font-weight: bold;}
-ol.commentlist li.comment ul.children {list-style: none; margin: 10px 0 0;}
-ol.commentlist li.comment ul.children li {}
-ol.commentlist li.comment ul.children li.alt {}
-ol.commentlist li.comment ul.children li.bypostauthor {}
-ol.commentlist li.comment ul.children li.byuser {}
-ol.commentlist li.comment ul.children li.comment {}
-ol.commentlist li.comment ul.children li.comment-author-admin {}
-ol.commentlist li.comment ul.children li.depth-2 {border-left: 5px solid #555; margin: 0 0 10px 10px;}
-ol.commentlist li.comment ul.children li.depth-3 {border-left: 5px solid #999; margin: 0 0 10px 10px;}
-ol.commentlist li.comment ul.children li.depth-4 {border-left: 5px solid #bbb; margin: 0 0 10px 10px;}
-ol.commentlist li.comment ul.children li.depth-5 {}
-ol.commentlist li.comment ul.children li.odd {}
-ol.commentlist li.even {background: #fff;}
-ol.commentlist li.odd {background: #f6f6f6;}
-ol.commentlist li.parent {border-left: 5px solid #111;}
-ol.commentlist li.thread-alt {}
-ol.commentlist li.thread-even {}
-ol.commentlist li.thread-odd {}
-
-
-/* Print styles!
--------------------------------------------------------------------------------*/
-@media print {
-
-h1, h2, h3, h4, #widget {text-shadow: none;}
-#sidebar, .entry img, .entry td, .entry th {box-shadow: none;}
-.entry img, .entry td, .entry th {border: 1px dotted #ccc;}
-
-}
-
-/* Media queries!
--------------------------------------------------------------------------------*/
-/* Consider this: www.cloudfour.com/css-media-query-for-mobile-is-fools-gold/ */
-
-
-@media all and (max-width: 1279px) and (min-width: 770px) { 
-
-#page-wrap {width: 980px;}
-.post {float:right; width: 609px; }
-.category-css {width: 980px;}
-
-}
-
-@media screen and (max-width: 769px) {
-
-body {font-family: Helmet, Freesans, sans-serif; }
-#page-wrap {width:auto; padding:0 10px;}
-
-h1 {font-size: 2em;}
-h2 {font-size: 1.6em; font-weight: bold;}
-h3 {font-size: 1.4em;}
-h4 {font-size: 1.2em;}
-p {font-size: 1em;}
-
-#header {border-bottom: 5px solid #555; padding-bottom: 80px; background-color: #fff;}
-#header .menu {padding: 0px 0;}
-#header .menu li a:hover {border-top: none;}
-#header .menu li {font-size: 1.03em; line-height: 1.5em; padding: .5em 0 .5em 0; float: none; display: list-item; border-bottom: 2px solid #ddd;}
-
-#searchsubmit {width: 40%; font-size: 1em;}
-.widget_search {float:left; margin-top: none; padding-bottom: 20px; margin-bottom:40px; margin-top: 20px; width:100%;}
-input[type=search] {width: 50%;}
-
-#sidebar {border-top: 5px solid #555; width:100%; margin-left:-10px; margin-top:40px; -webkit-border-radius: 0px; -moz-border-radius: 0px; border-radius: 0px; padding-top: 40px; padding-bottom: 40px;}
-#sidebar li {line-height: 1.5em;}
-
-.post, .category-css, .search-result {width:100%;}
-footer {display: none;}
-		
-}
-
-@media all and (orientation: portrait) {
-	
-}
-
-@media all and (orientation: landscape) {
-	
-}
+/**/
